# tf_tabular

./: .pre-commit-config.yaml  .pypirc  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: CI.yml  publish.yml  schedule-update-actions.yml
examples/: movielens.ipynb  titanic.ipynb
examples/movielens/: movielens.ipynb  movielens_model.py
examples/sequential/: movielens sequential.ipynb  movielens_sequential.ipynb  preprocessing.py
examples/titanic/: titanic.ipynb
src/tf_tabular/: __init__.py  builder.py  input_spec.py  numeric_processor.py  sequence_processor.py  utils.py
tests/: conftest.py  test_embeddings.py  test_get_vocab.py  test_input_categoricals.py  test_input_numericals.py  test_sequentials.py
