[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name =  "tabular-tf"
authors = [
    {name = "Mathias Claassen", email = "mathias@xmartlabs.com"},
]
description = "TF Tabular simplifies the experimentation and preprocessing of tabular datsets for TensorFlow models."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  'numpy >= 1.26',
  'pandas >= 2.2.1',
  'tensorflow <= 2.15.1',
]

[project.optional-dependencies]
test = [
    "ruff>=0.2.0",
    "mypy==1.10.0",
    "pre-commit==3.7.1",
    "pytest-cov==5.0.0",
    "pytest-mock<3.14.1",
    "pytest-runner",
    "pytest==8.2.2",
    "pytest-github-actions-annotate-failures",
]
examples = [
  'jupyter',
  'tensorflow_datasets >= 4.9.4',
  'tensorflow-recommenders >= 0.7.3',
  'matplotlib >= 3.8.4',
]

[project.urls]
Documentation = "https://github.com/mats-claassen/tf-tabular/tree/main#readme"
Source = "https://github.com/mats-claassen/tf-tabular"
Tracker = "https://github.com/mats-claassen/tf-tabular/issues"

[tool.flit.module]
name = "tf_tabular"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".ipynb",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
ignore-init-module-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.pytest.ini_options]
addopts = "--cov-report html:coverage.html --cov src --cov-fail-under 0 --cov-append -m 'not integration'"
pythonpath = [
  "src"
]
testpaths = "tests"
junit_family = "xunit2"
markers = [
    "integration: marks as integration test",
    "notebooks: marks as notebook test",
    "gpu: marks as gpu test",
    "spark: marks tests which need Spark",
    "slow: marks tests as slow",
    "unit: fast offline tests",
]

[tool.mypy]
ignore_missing_imports = true
